@@ -15,6 +15,8 @@ environment:
   DEBIAN_FRONTEND: noninteractive
   PERL_MM_USE_DEFAULT: 1
   NO_NETWORK_TESTING: 1
+  AUTHOR_TESTING: 1
+  NONINTERACTIVE_TESTING: 1
 
 platform: x64
 
